# mind

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  release.sh
src/: commands.rs  db.rs  editor.rs  main.rs  tags.rs
